--- a/public/Kanbas/Courses/Modules/index.html
+++ b/public/Kanbas/Courses/Modules/index.html
@@ -1,5 +1,9 @@
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
+  </head>
   <body>
     <!-- 3 buttons and a dropdown -->
     <button>Collapse All</button>
@@ -12,47 +16,63 @@
     <hr />
 
     <!-- course modules -->
-    <ul>
-      <li>
-        Week 0 - INTRO
-        <ul>
-          <li>
-            Learning Objectives
-            <ul>
-              <li>Introduction to the course</li>
-              <li>Learn what is Web Development</li>
-              <li>Createing a Development Environment</li>
-              <li>Createing a Web Application</li>
-            </ul>
+    <ul class="list-group wd-modules">
+      <!-- a module (week) -->
+      <li class="list-group-item">
+        <div>
+          <i class="fa fa-ellipsis-v"></i> Week 1
+          <!-- some icons float to the right: -->
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-plus ms-2"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </div>
+        <!-- a sub-module (nested lists) -->
+        <ul class="list-group">
+          <!-- an item in the nested list  -->
+          <li class="list-group-item">
+            <i class="fa fa-ellipsis-v"></i> Learning Objectives
+            <span class="float-end">
+              <i class="fa fa-check-circle text-success"></i>
+              <i class="fa fa-ellipsis-v ms-2"></i>
+            </span>
           </li>
-          <li>
-            READING
-            <ul>
-              <li>Chapter 1</li>
-              <li>Chapter 2</li>
-            </ul>
-          </li>
-          <li>
-            SLIDES
-            <ul>
-              <li><a href="">Intro to Web Dev</a></li>
-              <li><a href="">HTTP Server</a></li>
-            </ul>
+          <!-- an item in the nested list  -->
+          <li class="list-group-item">
+            <i class="fa fa-ellipsis-v"></i> Reading
+            <span class="float-end">
+              <i class="fa fa-check-circle text-success"></i>
+              <i class="fa fa-ellipsis-v ms-2"></i>
+            </span>
           </li>
         </ul>
       </li>
-      <li>
-        Week 1 - HTML
-        <ul>
-          <li>Learning Objectives</li>
-          <ul>
-            <li>Getting Started with the 1st Assignment</li>
-          </ul>
-          <li>
-            READING
-            <ul>
-              <li>Chapter 3</li>
-            </ul>
+
+      <!-- a module (week) -->
+      <li class="list-group-item">
+        <div>
+          <i class="fa fa-ellipsis-v"></i> Week 2
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-plus ms-2"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </div>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <i class="fa fa-ellipsis-v"></i> Learning Objectives
+            <span class="float-end">
+              <i class="fa fa-check-circle text-success"></i>
+              <i class="fa fa-ellipsis-v ms-2"></i>
+            </span>
+          </li>
+          <li class="list-group-item">
+            <i class="fa fa-ellipsis-v"></i> Reading
+            <span class="float-end">
+              <i class="fa fa-check-circle text-success"></i>
+              <i class="fa fa-ellipsis-v ms-2"></i>
+            </span>
           </li>
         </ul>
       </li>
